--- a/Contact.html
+++ b/Contact.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h3>Contact Me </h3>
-    <p>Email me on : shubhamkango29@gmail.com</p>
-    <a href="https://www.linkedin.com/in/shubham-kango-6a877a195/?originalSubdomain=in">Linkedin</a>
-    <br><br>
-    <a href="https://www.instagram.com/shubham.kango/">Instagram</a><br><br>
-    <a href="https://twitter.com/shubham_kango/status/1385246193219903491">Twitter</a><br><br>
-    <hr>
-    <h3>About you</h3>
-    <form action="mailto:shubhamkango29@gmail.com" method="post" enctype="text/plain">
-<label for="">Username:</label>
-<input type="email" name="Username" value=""><br><br>
-<label for="">Password:</label>
-<input type="password" name="password" value=""><br><br>
 
-<label for="">Your Message:</label> <br>
-<textarea name="Message!" rows="7" cols="33"></textarea>
-<input type="submit" name="Submit">
-    </form>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Contact me</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+  <h3>Contact Me </h3>
+  <p>Email me on : shubhamkango29@gmail.com</p>
+  <a href="https://www.linkedin.com/in/shubham-kango-6a877a195/?originalSubdomain=in">Linkedin</a>
+  <br><br>
+  <a href="https://www.instagram.com/shubham.kango/">Instagram</a><br><br>
+  <a href="https://twitter.com/shubham_kango/status/1385246193219903491">Twitter</a><br><br>
+  <hr>
+  <h3>About you</h3>
+  <form action="mailto:shubhamkango29@gmail.com" method="post" enctype="text/plain">
+    <label for="">Username:</label>
+    <input type="email" name="Username" value=""><br><br>
+    <label for="">Password:</label>
+    <input type="password" name="password" value=""><br><br>
+
+    <label for="">Your Message:</label> <br>
+    <textarea name="Message!" rows="7" cols="33"></textarea>
+    <input type="submit" name="Submit">
+  </form>
+  <br>
+  <hr>
+  <br>
+  <a href="Index.html">Home</a>
+  <a href="hobbies.html">Hobbies</a>
+</body>
+
 </html>
