--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My First Website</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -12,8 +13,8 @@
       <td><a href="https://www.quora.com/profile/Shubham-Kango"><img src="Pic-modified.png" alt=""></a></td>
       <td>
         <h1> Shubham Kango </h1>
-        <p> <i> Webdeveloper </i> <em>Frontend </em>
-          <strong>Backend</strong> <b>Full Stack</b>
+        <p> <strong> Webdeveloper:</strong> <strong>Frontend 👉</strong>
+          <strong>Backend 👉</strong> <b>Full Stack</b>
         </p>
 
         <p> I am a full stack developer and love to <a href="https://en.wikipedia.org/wiki/Code">code.....</a></p>
@@ -78,7 +79,8 @@
 
   <hr>
   <a href="hobbies.html">Hobbies</a>
-  <a href="Contact.html">Contact me</a>  
+  <a href="Contact.html">Contact me</a>
+
 </body>
 
 </html>
