--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>Hobbies</h3>
@@ -11,5 +12,9 @@
       <li>Meditation</li>
       <li>Coding</li>
     </ol>
+    <hr>
+    <br>
+    <a href="Index.html">Home</a>
+    <a href="Contact.html">Contact</a>
   </body>
 </html>
